new MRS version

--- a/MixedRealityServer/CMakeLists.txt
+++ b/MixedRealityServer/CMakeLists.txt
@@ -35,3 +35,4 @@ rosbuild_add_library(MRS src/MixedRealityServer.cpp)
 rosbuild_add_executable(MRS src/Main.cpp)
 rosbuild_add_executable(MapTF src/MapTF.cpp)
 rosbuild_add_executable(ControlMRS src/ControlMRS.cpp)
+rosbuild_add_executable(RealityPublisher src/RealityPublisher.cpp)
