--- a/knowledge_ros_service/conf/srsknow.cfg
+++ b/knowledge_ros_service/conf/srsknow.cfg
@@ -1,7 +1,7 @@
-ontologyFile /home/ze/ros_workspace/knowledge_ros_service/conf/house.owl
+ontologyFile house.owl
 nodename knowledge_srs_node
 taskRequestService task_request
 planNextActionService plan_next_action
 generateSequenceService generate_sequence
 querySparQLService query_sparql
-taskfile /home/ze/ros_workspace/knowledge_ros_service/conf/task1.seq
+taskfile task1.seq
