--- a/srs_object_verification/CMakeLists.txt
+++ b/srs_object_verification/CMakeLists.txt
@@ -26,5 +26,5 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
+rosbuild_add_executable(semantic_extraction_test_server src/semantic_extraction_test_server.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
