get_objects_on_map serice et

--- a/srs_knowledge/conf/srsknow.cfg
+++ b/srs_knowledge/conf/srsknow.cfg
@@ -1,7 +1,10 @@
-ontologyFile house.owl
+ontologyFile ontologies/ipa-kitchen-map/ipa-kitchen-map.owl  
 nodename knowledge_srs_node
 taskRequestService task_request
 planNextActionService plan_next_action
 generateSequenceService generate_sequence
 querySparQLService query_sparql
+getObjectsOnMapService get_objects_on_map
+getWorkSpaceOnMapService get_workspace_on_map
 taskfile task1.seq
+map_namespace ipa-kitchen-map
