--- a/srs_pellet/Makefile
+++ b/srs_pellet/Makefile
@@ -1,7 +1,7 @@
 all: installed
 
 TARBALL		= build/pellet-2.3.0.zip
-TARBALL_URL 	= http://dl.dropbox.com/u/29720262/pellet-2.3.0.zip
+TARBALL_URL 	= http://srs-project.eu/sites/default/files/pellet-2.3.0.zip
 UNPACK_CMD  	= unzip -uo
 SOURCE_DIR 	= build/pellet-2.3.0
 MD5SUM_FILE	= pellet-2.3.0.md5sum
