--- a/srs_knowledge/conf/ontologies/ipa-kitchen-map/ipa-kitchen-map.owl.in
+++ b/srs_knowledge/conf/ontologies/ipa-kitchen-map/ipa-kitchen-map.owl.in
@@ -204,6 +204,9 @@
     <owl:NamedIndividual rdf:about="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Dishwasher0">
         <rdf:type rdf:resource="&srs;Dishwasher"/>
         <srs:yCoord rdf:datatype="&xsd;float">-3.2</srs:yCoord>
+        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
+        <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
+        <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
         <srs:xCoord rdf:datatype="&xsd;float">0.16</srs:xCoord>
         <srs:zCoord rdf:datatype="&xsd;float">0.425</srs:zCoord>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
@@ -218,6 +221,9 @@
     <owl:NamedIndividual rdf:about="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Fridge0">
         <rdf:type rdf:resource="&srs;Refrigerator-Freezer"/>
         <srs:xCoord rdf:datatype="&xsd;float">-3.2</srs:xCoord>
+        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
+        <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
+        <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.6</srs:widthOfObject>
         <srs:zCoord rdf:datatype="&xsd;float">0.7</srs:zCoord>
@@ -259,6 +265,9 @@
         <rdf:type rdf:resource="&srs;Oven"/>
         <srs:yCoord rdf:datatype="&xsd;float">-1.04</srs:yCoord>
         <srs:xCoord rdf:datatype="&xsd;float">-3.2</srs:xCoord>
+        <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
+        <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
+        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:zCoord rdf:datatype="&xsd;float">0.425</srs:zCoord>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.6</srs:widthOfObject>
@@ -272,6 +281,9 @@
     <owl:NamedIndividual rdf:about="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Sink0">
         <rdf:type rdf:resource="&srs;Sink"/>
         <srs:xCoord rdf:datatype="&xsd;float">-3.2</srs:xCoord>
+        <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
+        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
+        <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.6</srs:widthOfObject>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:zCoord rdf:datatype="&xsd;float">0.7</srs:zCoord>
@@ -285,6 +297,9 @@
 
     <owl:NamedIndividual rdf:about="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Sofa0">
         <rdf:type rdf:resource="&srs;Sofa-PieceOfFurniture"/>
+        <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
+        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
+        <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
         <srs:zCoord rdf:datatype="&xsd;float">0.225</srs:zCoord>
         <srs:heightOfObject rdf:datatype="&xsd;float">0.45</srs:heightOfObject>
         <srs:yCoord rdf:datatype="&xsd;float">0.595</srs:yCoord>
@@ -301,6 +316,9 @@
         <rdf:type rdf:resource="&srs;StoveTop"/>
         <srs:yCoord rdf:datatype="&xsd;float">-0.54</srs:yCoord>
         <srs:xCoord rdf:datatype="&xsd;float">-3.2</srs:xCoord>
+        <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
+        <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
+        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.6</srs:widthOfObject>
         <srs:zCoord rdf:datatype="&xsd;float">0.7</srs:zCoord>
@@ -313,6 +331,15 @@
 
     <owl:NamedIndividual rdf:about="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Table0">
         <rdf:type rdf:resource="&srs;Table-PieceOfFurniture"/>
+        <srs:yCoord rdf:datatype="&xsd;float">-1.5</srs:yCoord>
+        <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
+        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
+        <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
+        <srs:zCoord rdf:datatype="&xsd;float">0.1</srs:zCoord>
+        <srs:heightOfObject rdf:datatype="&xsd;float">0.74</srs:heightOfObject>
+        <srs:widthOfObject rdf:datatype="&xsd;float">0.9</srs:widthOfObject>
+        <srs:lengthOfObject rdf:datatype="&xsd;float">0.9</srs:lengthOfObject>
+        <srs:xCoord rdf:datatype="&xsd;float">2.5</srs:xCoord>
         <srs:inFrontOf-Generally rdf:resource="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Sofa0"/>
     </owl:NamedIndividual>
     
