--- a/srs_knowledge/conf/ontologies/ipa-kitchen-map/ipa-kitchen-map.owl.in
+++ b/srs_knowledge/conf/ontologies/ipa-kitchen-map/ipa-kitchen-map.owl.in
@@ -203,10 +203,11 @@
 
     <owl:NamedIndividual rdf:about="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Dishwasher0">
         <rdf:type rdf:resource="&srs;Dishwasher"/>
+        <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:yCoord rdf:datatype="&xsd;float">-3.2</srs:yCoord>
-        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
+        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:xCoord rdf:datatype="&xsd;float">0.16</srs:xCoord>
         <srs:zCoord rdf:datatype="&xsd;float">0.425</srs:zCoord>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
@@ -220,12 +221,13 @@
 
     <owl:NamedIndividual rdf:about="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Fridge0">
         <rdf:type rdf:resource="&srs;Refrigerator-Freezer"/>
+        <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:xCoord rdf:datatype="&xsd;float">-3.2</srs:xCoord>
         <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
-        <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.6</srs:widthOfObject>
+        <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:zCoord rdf:datatype="&xsd;float">0.7</srs:zCoord>
         <srs:yCoord rdf:datatype="&xsd;float">1.36</srs:yCoord>
         <srs:heightOfObject rdf:datatype="&xsd;float">1.4</srs:heightOfObject>
@@ -263,6 +265,7 @@
 
     <owl:NamedIndividual rdf:about="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Oven0">
         <rdf:type rdf:resource="&srs;Oven"/>
+        <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:yCoord rdf:datatype="&xsd;float">-1.04</srs:yCoord>
         <srs:xCoord rdf:datatype="&xsd;float">-3.2</srs:xCoord>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
@@ -280,10 +283,11 @@
 
     <owl:NamedIndividual rdf:about="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Sink0">
         <rdf:type rdf:resource="&srs;Sink"/>
+        <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:xCoord rdf:datatype="&xsd;float">-3.2</srs:xCoord>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
-        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
+        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.6</srs:widthOfObject>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:zCoord rdf:datatype="&xsd;float">0.7</srs:zCoord>
@@ -297,9 +301,10 @@
 
     <owl:NamedIndividual rdf:about="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Sofa0">
         <rdf:type rdf:resource="&srs;Sofa-PieceOfFurniture"/>
+        <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
-        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
+        <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:zCoord rdf:datatype="&xsd;float">0.225</srs:zCoord>
         <srs:heightOfObject rdf:datatype="&xsd;float">0.45</srs:heightOfObject>
         <srs:yCoord rdf:datatype="&xsd;float">0.595</srs:yCoord>
@@ -315,12 +320,13 @@
     <owl:NamedIndividual rdf:about="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Stove0">
         <rdf:type rdf:resource="&srs;StoveTop"/>
         <srs:yCoord rdf:datatype="&xsd;float">-0.54</srs:yCoord>
+        <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:xCoord rdf:datatype="&xsd;float">-3.2</srs:xCoord>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
         <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
-        <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.6</srs:widthOfObject>
+        <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:zCoord rdf:datatype="&xsd;float">0.7</srs:zCoord>
         <srs:heightOfObject rdf:datatype="&xsd;float">0.85</srs:heightOfObject>
     </owl:NamedIndividual>
@@ -331,6 +337,7 @@
 
     <owl:NamedIndividual rdf:about="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Table0">
         <rdf:type rdf:resource="&srs;Table-PieceOfFurniture"/>
+        <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:yCoord rdf:datatype="&xsd;float">-1.5</srs:yCoord>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
         <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
