rpy to quaternion format for furniture in owl

--- a/srs_knowledge/conf/ontologies/ipa-kitchen-map/ipa-kitchen-map.owl.in
+++ b/srs_knowledge/conf/ontologies/ipa-kitchen-map/ipa-kitchen-map.owl.in
@@ -205,14 +205,18 @@
         <rdf:type rdf:resource="&srs;Dishwasher"/>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:yCoord rdf:datatype="&xsd;float">-3.2</srs:yCoord>
+        <srs:qx rdf:datatype="&xsd;float">0</srs:qx>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
         <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
+        <srs:qz rdf:datatype="&xsd;float">0</srs:qz>
+        <srs:qy rdf:datatype="&xsd;float">0</srs:qy>
         <srs:xCoord rdf:datatype="&xsd;float">0.16</srs:xCoord>
         <srs:zCoord rdf:datatype="&xsd;float">0.425</srs:zCoord>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.6</srs:widthOfObject>
         <srs:heightOfObject rdf:datatype="&xsd;float">0.85</srs:heightOfObject>
+        <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
     </owl:NamedIndividual>
     
 
@@ -223,12 +227,16 @@
         <rdf:type rdf:resource="&srs;Refrigerator-Freezer"/>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:xCoord rdf:datatype="&xsd;float">-3.2</srs:xCoord>
+        <srs:qz rdf:datatype="&xsd;float">0</srs:qz>
         <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
+        <srs:qx rdf:datatype="&xsd;float">0</srs:qx>
+        <srs:qy rdf:datatype="&xsd;float">0</srs:qy>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.6</srs:widthOfObject>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:zCoord rdf:datatype="&xsd;float">0.7</srs:zCoord>
+        <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
         <srs:yCoord rdf:datatype="&xsd;float">1.36</srs:yCoord>
         <srs:heightOfObject rdf:datatype="&xsd;float">1.4</srs:heightOfObject>
     </owl:NamedIndividual>
@@ -268,12 +276,16 @@
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:yCoord rdf:datatype="&xsd;float">-1.04</srs:yCoord>
         <srs:xCoord rdf:datatype="&xsd;float">-3.2</srs:xCoord>
+        <srs:qx rdf:datatype="&xsd;float">0</srs:qx>
+        <srs:qz rdf:datatype="&xsd;float">0</srs:qz>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
+        <srs:qy rdf:datatype="&xsd;float">0</srs:qy>
         <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:zCoord rdf:datatype="&xsd;float">0.425</srs:zCoord>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.6</srs:widthOfObject>
+        <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
         <srs:heightOfObject rdf:datatype="&xsd;float">1.4</srs:heightOfObject>
     </owl:NamedIndividual>
     
@@ -286,12 +298,16 @@
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:xCoord rdf:datatype="&xsd;float">-3.2</srs:xCoord>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
+        <srs:qz rdf:datatype="&xsd;float">0</srs:qz>
+        <srs:qx rdf:datatype="&xsd;float">0</srs:qx>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
+        <srs:qy rdf:datatype="&xsd;float">0</srs:qy>
         <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.6</srs:widthOfObject>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:zCoord rdf:datatype="&xsd;float">0.7</srs:zCoord>
         <srs:yCoord rdf:datatype="&xsd;float">0.76</srs:yCoord>
+        <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
         <srs:heightOfObject rdf:datatype="&xsd;float">1.4</srs:heightOfObject>
     </owl:NamedIndividual>
     
@@ -303,12 +319,16 @@
         <rdf:type rdf:resource="&srs;Sofa-PieceOfFurniture"/>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
+        <srs:qz rdf:datatype="&xsd;float">0</srs:qz>
+        <srs:qx rdf:datatype="&xsd;float">0</srs:qx>
+        <srs:qy rdf:datatype="&xsd;float">0</srs:qy>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
         <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:zCoord rdf:datatype="&xsd;float">0.225</srs:zCoord>
         <srs:heightOfObject rdf:datatype="&xsd;float">0.45</srs:heightOfObject>
         <srs:yCoord rdf:datatype="&xsd;float">0.595</srs:yCoord>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.89</srs:lengthOfObject>
+        <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
         <srs:widthOfObject rdf:datatype="&xsd;float">1.75</srs:widthOfObject>
         <srs:xCoord rdf:datatype="&xsd;float">2.625</srs:xCoord>
     </owl:NamedIndividual>
@@ -323,12 +343,16 @@
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:xCoord rdf:datatype="&xsd;float">-3.2</srs:xCoord>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
+        <srs:qz rdf:datatype="&xsd;float">0</srs:qz>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
         <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
+        <srs:qy rdf:datatype="&xsd;float">0</srs:qy>
+        <srs:qx rdf:datatype="&xsd;float">0</srs:qx>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.6</srs:widthOfObject>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.6</srs:lengthOfObject>
         <srs:zCoord rdf:datatype="&xsd;float">0.7</srs:zCoord>
         <srs:heightOfObject rdf:datatype="&xsd;float">0.85</srs:heightOfObject>
+        <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
     </owl:NamedIndividual>
     
 
@@ -340,12 +364,16 @@
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">-1</srs:houseHoldObjectID>
         <srs:yCoord rdf:datatype="&xsd;float">-1.5</srs:yCoord>
         <srs:y3d rdf:datatype="&xsd;float">0</srs:y3d>
+        <srs:qx rdf:datatype="&xsd;float">0</srs:qx>
+        <srs:qz rdf:datatype="&xsd;float">0</srs:qz>
         <srs:r3d rdf:datatype="&xsd;float">0</srs:r3d>
         <srs:p3d rdf:datatype="&xsd;float">0</srs:p3d>
+        <srs:qy rdf:datatype="&xsd;float">0</srs:qy>
         <srs:zCoord rdf:datatype="&xsd;float">0.1</srs:zCoord>
         <srs:heightOfObject rdf:datatype="&xsd;float">0.74</srs:heightOfObject>
         <srs:widthOfObject rdf:datatype="&xsd;float">0.9</srs:widthOfObject>
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.9</srs:lengthOfObject>
+        <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
         <srs:xCoord rdf:datatype="&xsd;float">2.5</srs:xCoord>
         <srs:inFrontOf-Generally rdf:resource="http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#Sofa0"/>
     </owl:NamedIndividual>
