getobjectsontray and getobjectsonmap with spatialinfo

--- a/srs_knowledge/conf/srsknow.cfg
+++ b/srs_knowledge/conf/srsknow.cfg
@@ -6,5 +6,6 @@ generateSequenceService generate_sequence
 querySparQLService query_sparql
 getObjectsOnMapService get_objects_on_map
 getWorkSpaceOnMapService get_workspace_on_map
+getObjectsOnTrayService get_objects_on_tray
 taskfile task1.seq
 map_namespace ipa-kitchen-map
