exception types added

--- a/srs_knowledge/conf/srsknow.cfg
+++ b/srs_knowledge/conf/srsknow.cfg
@@ -7,5 +7,7 @@ querySparQLService query_sparql
 getObjectsOnMapService get_objects_on_map
 getWorkSpaceOnMapService get_workspace_on_map
 getObjectsOnTrayService get_objects_on_tray
+insertInstance insert_instance
+deleteInstanceService delete_instance
 taskfile task1.seq
 map_namespace ipa-kitchen-map
