--- a/srs_knowledge/conf/srsknow-empty.cfg
+++ b/srs_knowledge/conf/srsknow-empty.cfg
@@ -9,5 +9,6 @@ getWorkSpaceOnMapService get_workspace_on_map
 getObjectsOnTrayService get_objects_on_tray
 insertInstance insert_instance
 deleteInstanceService delete_instance
+updatePosInfoService update_pos_info
 taskfile task1.seq
 map_namespace empty-map
