--- a/srs_ui_but/lib/but_gui.yaml
+++ b/srs_ui_but/lib/but_gui.yaml
@@ -21,3 +21,9 @@ displays:
     display_name: ButCamDisplay
     description: |
       This display allows to create rectangular polygon reading its position from desired topic, with dynamic texture
+  -
+    class_name: CButCamCast
+    display_name: CButCamCast
+    description: |
+      This display allows to screencast rviz camera to the ros topic as a image message.
+      
