get_predefined_poses service implemented

--- a/srs_knowledge/conf/srsknow.cfg
+++ b/srs_knowledge/conf/srsknow.cfg
@@ -10,5 +10,7 @@ getObjectsOnTrayService get_objects_on_tray
 insertInstance insert_instance
 deleteInstanceService delete_instance
 updatePosInfoService update_pos_info
+getRoomsOnMapService get_rooms_on_map
+getPredefinedPosesService get_predefined_poses
 taskfile task1.seq
 map_namespace ipa-kitchen-map
