Added get_pregrasps service

--- a/srs_ui_but/CMakeLists.txt
+++ b/srs_ui_but/CMakeLists.txt
@@ -50,8 +50,8 @@ set( DISPLAY_SOURCE_FILES src/but_display/but_display.cpp
                           src/but_display/but_pointcloud.cpp
                           src/but_display/point_cloud_base.cpp
                           src/but_display/but_examplepane.cpp
-                          src/but_display/but_distance_linear_visualizer.cpp
-                          src/but_display/but_distance_circular_indicator.cpp
+                          src/but_display/but_distance_visualizer.cpp #src/but_display/but_distance_linear_visualizer.cpp
+                          src/but_display/but_distance_indicator.cpp #src/but_display/but_distance_circular_indicator.cpp
 			  			  src/but_data_fusion/but_cam_display.cpp
 			  			  src/but_display/but_camcast.cpp
 			  			  src/but_display/CRosRttTexture.cpp
