--- a/srs_knowledge/CMakeLists.txt
+++ b/srs_knowledge/CMakeLists.txt
@@ -17,8 +17,8 @@ add_jar_dir(${srs_pellet_PACKAGE_PATH}/common/lib/jena)
 
 if(NOT EXISTS ${PROJECT_SOURCE_DIR}/lib/javaGeom-0.10.2.jar)
 MESSAGE(STATUS " --> DOWNLOAD JAVAGEOM")
-rosbuild_download_data(http://sourceforge.net/projects/geom-java/files/javaGeom/javaGeom%200.10.2/javaGeom-0.10.2.jar/download lib/javaGeom-0.10.2.jar 6c1305d6c19fad12a6a935810d2aa46f)
-#file(DOWNLOAD http://sourceforge.net/projects/geom-java/files/javaGeom/javaGeom%200.10.2/javaGeom-0.10.2.jar/download ${PROJECT_SOURCE_DIR}/lib/javaGeom-0.10.2.jar SHOW_PROGRESS)
+#rosbuild_download_data(http://sourceforge.net/projects/geom-java/files/javaGeom/javaGeom%200.10.2/javaGeom-0.10.2.jar/download lib/javaGeom-0.10.2.jar 6c1305d6c19fad12a6a935810d2aa46f)
+file(DOWNLOAD http://sourceforge.net/projects/geom-java/files/javaGeom/javaGeom%200.10.2/javaGeom-0.10.2.jar/download ${PROJECT_SOURCE_DIR}/lib/javaGeom-0.10.2.jar SHOW_PROGRESS)
 endif(NOT EXISTS ${PROJECT_SOURCE_DIR}/lib/javaGeom-0.10.2.jar)
 
 add_jar_dir(${PROJECT_SOURCE_DIR}/lib)
