--- a/srs_ui_but/lib/but_gui.yaml
+++ b/srs_ui_but/lib/but_gui.yaml
@@ -7,6 +7,11 @@ displays:
     description: |
       This demonstrational display shows only basic geometry.
   -
+    class_name: CExamplePanelControls
+    display_name: CExamplePanelControls
+    description: |
+      Show octomap controls.    
+  -
     class_name: CButPointCloud
     display_name: CButPointCloud
     description: |
