--- a/srs_knowledge/conf/srsknow.cfg.in
+++ b/srs_knowledge/conf/srsknow.cfg.in
@@ -14,3 +14,5 @@ getRoomsOnMapService get_rooms_on_map
 getPredefinedPosesService get_predefined_poses
 taskfile task1.seq
 map_namespace ipa-kitchen-map
+grasp_mode move_and_grasp
+#grasp_mode just_grasp
