--- a/srs_knowledge/conf/srsknow-empty.cfg.in
+++ b/srs_knowledge/conf/srsknow-empty.cfg.in
@@ -10,5 +10,12 @@ getObjectsOnTrayService get_objects_on_tray
 insertInstance insert_instance
 deleteInstanceService delete_instance
 updatePosInfoService update_pos_info
+getRoomsOnMapService get_rooms_on_map
+getPredefinedPosesService get_predefined_poses
 taskfile task1.seq
-map_namespace empty-map
+#map_namespace empty-map
+env_namespace http://www.srs-project.eu/ontologies/empty-map.owl#
+ont_namespace http://www.srs-project.eu/ontologies/srs.owl#
+map_name empty-map
+grasp_mode move_and_grasp
+#grasp_mode just_grasp
