--- a/srs_knowledge/conf/srsknow.cfg.in
+++ b/srs_knowledge/conf/srsknow.cfg.in
@@ -13,6 +13,9 @@ updatePosInfoService update_pos_info
 getRoomsOnMapService get_rooms_on_map
 getPredefinedPosesService get_predefined_poses
 taskfile task1.seq
-map_namespace ipa-kitchen-map
+#map_namespace ipa-kitchen-map
+env_namespace http://www.srs-project.eu/ontologies/ipa-kitchen-map.owl#
+ont_namespace http://www.srs-project.eu/ontologies/srs.owl#
+map_name ipa-kitchen-map
 grasp_mode move_and_grasp
 #grasp_mode just_grasp
